--- a/frame/randomness-beacon/Cargo.toml
+++ b/frame/randomness-beacon/Cargo.toml
@@ -17,6 +17,7 @@ codec = { package = "parity-scale-codec", version = "1.3.1", default-features = 
 sp-inherents = { version = "2.0.0", default-features = false, path = "../../primitives/inherents" }
 sp-randomness-beacon= { version = "0.1.0", default-features = false, path = "../../primitives/randomness-beacon" }
 sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
+sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
 frame-support = { version = "2.0.0", default-features = false, path = "../support" }
 frame-system = { version = "2.0.0", default-features = false, path = "../system" }
 
